# rpn_calculator

./: .env_example  Dockerfile  README.md  ToDo.md  alembic.ini  config.py  pyproject.toml
alembic/: README  env.py
alembic/versions/: 33feb014e20f_create_table_stacks.py
calculator/: db.py  models.py
calculator/api/: main.py
calculator/api/rpn/: __init__.py  operand.py  stack.py
calculator/api/static/: swagger.html  swagger.yaml
tests/: conftest.py  test_api.py
